<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.do_uble.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_bagis"
        android:name="com.do_uble.ui.bagis.BagisFragment"
        android:label="@string/title_bagis"
        tools:layout="@layout/fragment_bagis" />

    <fragment
        android:id="@+id/navigation_funds"
        android:name="com.do_uble.ui.funds.FundsFragment"
        android:label="@string/title_funds"
        tools:layout="@layout/fragment_funds" />
</navigation>
