<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".ui.bagis.BagisFragment">

    <androidx.appcompat.widget.AppCompatEditText
        android:hint="@string/bagis_neden"
        android:id="@+id/bagis_neden"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.AppCompatEditText
        android:hint="@string/bagis_miktar"
        android:id="@+id/bagis_miktar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.AppCompatButton
        android:text="@string/bagis_olustur"
        android:textAllCaps="false"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:id="@+id/bagis_olustur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>